# parking-management-system

./: .gitignore  ElectricVehicle.py  README.md  Vehicle.py  agent  baseline_architecture.md  main.py  parking_manager.py  pyproject.toml  requirements.txt
docs/: allocation_strategy_design.md  anti_pattern_catalog.md  api_sketches_master.md  arch_migration_guidance.md  arch_migration_phases_definition.md  behavioral_validation_report.md  codebase_audit_report.md  codebase_health_assessment.md  consolidated_pattern_justification.md  ddd_aggregate_definitions.md  ddd_bounded_contexts.md  ddd_concept_catalog.md  ddd_consistency_validation_report.md  ddd_context_map.md  ddd_context_scaling_implications.md  ddd_core_domain_analysis.md  ddd_ev_subdomain_analysis.md  ddd_model_scope_validation.md  ddd_stakeholder_review_package.md  ddd_subdomain_catalog.md  ddd_subdomain_scope_definitions.md  ddd_term_disambiguation_log.md  ddd_ubiquitous_language_glossary.md  design_pattern_decisions.md  di_framework_design.md  diagram_validation_report.md  ev_charging_domain_model.md  ev_charging_master_design.md  execution_evidence_scenarios.md  master_anti_pattern_catalog.md  microservices_catalog.md  microservices_migration_guidance.md  original_behavioral_diagram.md  pattern_1_strategy_design.md  pattern_1_strategy_guide.md  pattern_2_observer_design.md  pattern_2_observer_guide.md  pattern_analysis_notes.md  pattern_locations_index.md  pattern_selection_matrix.md  (+12 more)
evidence/: README.md
notebooks/: testing_anti_patterns.ipynb
tests/: test_di.py  test_observer.py  test_park.py  (+2 more)
(+6 files in other folders)
